# ffmpeg-audio

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ffmpeg-audio.cabal  settings.json
src/FFmpeg/: Audio.hs
src/FFmpeg/Audio/: Encoder.hs  PCMBuffer.hs
src/FFmpeg/Audio/Internal/: Codec.hsc  CodecContext.hsc  Encoder.hsc  Error.hsc  FFI.hsc  Format.hsc  Frame.hsc  Packet.hsc  Types.hsc
test/: CodecContextSpec.hs  CodecSpec.hs  EncoderSpec.hs  ErrorSpec.hs  FormatSpec.hs  FrameSpec.hs  Main.hs  PacketSpec.hs
