cabal-version:      3.14
name:               ffmpeg-audio
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/arjunswaj/ffmpeg-audio
license:            LGPL-2.1-or-later
license-file:       LICENSE
author:             Arjun Shekar Bharadwaj
maintainer:         arjun.s.waj@gmail.com
-- copyright:
category:           Haskell Bindings for a Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   src
    default-language: GHC2024

test-suite ffmpeg-audio-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        ffmpeg-audio
